# ai-hed-website

./: .gitignore  Hugo - Static Site Generator.md  Makefile  README.md  ai-hed-preroll.html  config.example.yaml  count_content.py  hugo.toml  mooc-section-homepage.html  plan.md  pyproject.toml  record-preroll.js  spec.md
archetypes/: default.md
content/: _index.html
content/01. about/: index.md
content/02 . activities/: index.md
content/02. activities/: index.md
content/02. ai in higher education/: index.md
content/03. contact/: index.md
content/04. outreach/: index.md
content/05. resources/: index.md
content/about/: index.md
content/activities/: index.md
content/ai literacy/: index.md
content/authors/: _index.md
content/contact/: index.md
content/final-event/: index.md
content/from-the-classroom/: _index.md  consumer-branding-hva.md  digital-marketing-foi.md  digital-transformation-foi.md  gamification-public-relations-escs.md  innovate-for-impact-hva.md  introduction-to-political-science-uas-bfi.md  (+2 more)
data/: best_practices.json  newsletter-archive.json  newsletter_archive.json
i18n/: en.json  en.yaml  pt.json
layouts/: baseof.html  newsletter-archive.html  page-banner-generator.html  page-final-event.html  page-guidelines.html  page-heatmap.html  page-social-media-tool.html  rss.xml  section.html  single.html  summary.html
scripts/: newsletter_analytics.py  pyproject.toml  run_all_analytics.py  subscriber_analytics.py
static/: _redirects
tests/: test_config.py  test_converter.py  test_database.py  test_sync.py
(+186 files in other folders)
